		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.3 *-

??022002 (v2.1dev8)
	- added: reverse audio object type; see the ecasound(1) 
		 man page for better documentation
	- changed: JACK support updated to match JACK's 28/Jan/02
		   CVS-tree
	- fixed: -[io]:alsaplugin,x,y didn't work with latest ALSA
		 0.9betaX releases
	- fixed: serious bug in setting up ALSA 0.9.x buffering params
	- fixed: rare bug with sampling rate changes
	- fixed: autoconf 2.5x fixes [iondiode]
	- fixed: typeselect - opening and closing a typeselect 
		 device multiple times caused a seg.fault
16012002 (v2.1dev7)
	- edi-entries: edi-12
	- added: a watchdog thread that handles thread cleanup; 
	 	 this is needed especially for audio and chainop
 	         objects which create their own threads (like jack)
	- changed: unification of interactive and passive 
                   modes; running ecasound without -c is now
		   pretty close to "echo run | ecasound -c cmds"
	- changed: if an invalid chainsetup is given on the command
	           line, and -c is given, ecasound will print an 
		   error but will not exit as it did before; you 
		   can continue editing in the ia-mode to check 
 		   what was wrong in the setup
	- changed: compilation of eca-iamode-parser.cpp is now 
		   significantly faster and takes less resources;
		   this should fix problems with compiling ecasound 
                   on machines with <256MB of memory
	- fixed: audio-manager.h was missing from the dist-package
	- fixed: critical bug that prevented writing to 
 		 double-buffered non-realtime output objects
	- fixed: chainsetups with multiple controller objects of
		 the same type didn't work in 2.1dev6 [jesse]
	- fixed: edi-12 - multichannel, noninterleaved ALSA 0.9 input
		 and output not working properly
22122001 (v2.1dev6)
	- edi-entries: edi-8, edi-11, edi-17
	- note: review of all samplebuffer-related code; 