@@ -12,7 +12,7 @@ htmlcommand(
 
 manpage(ecasound)
        (1)
-       (28.01.2002)
+       (29.01.2002)
        ()
        (Multimedia software)
 
@@ -438,11 +438,10 @@ dit(-ei:pitch-shift-%)
 Pitch shifter. Modifies audio pitch by altering its length.
 
 dit(-epp:right-%)
-Normal pan effect. Balance value of 0 means to pan signal fully
-left and 100 fully right. If the panned signal is
-a stereo signal, left and right channels aren't mixed together.
-Use the -erm and -erc effects to force conversion to mono before 
-panning.
+Stereo panner. Changes the relative balance between the first
+two channels. When 'right-%' is 0, only signal on the left 
+(1st) channel is passed through. Similarly if it is '100', 
+only right (2nd) channel is let through.
 
 dit(-ezx:left-dc-fix-value,right-dc-fix-value)
 Adjusts the signal DC by 'dc-fix-value'. Use -ezf to find the
