@@ -22,6 +22,9 @@ Last officially released version is -*> v2.0.3 *-
 		 man page for better documentation
 	- changed: JACK support updated to match JACK's 28/Jan/02
 		   CVS-tree
+	- changed: pyecasound - module libpyecasound.so renamed 
+		   to pyeca.so; this replaces the old pyeca.py 
+		   wrapper
 	- fixed: -[io]:alsaplugin,x,y didn't work with latest ALSA
 		 0.9betaX releases
 	- fixed: serious bug in setting up ALSA 0.9.x buffering params
@@ -29,6 +32,8 @@ Last officially released version is -*> v2.0.3 *-
 	- fixed: autoconf 2.5x fixes [iondiode]
 	- fixed: typeselect - opening and closing a typeselect 
 		 device multiple times caused a seg.fault
+	- fixed: ECI apps dumped core when executing their first
+		 command
 16012002 (v2.1dev7)
 	- edi-entries: edi-12
 	- added: a watchdog thread that handles thread cleanup; 
